--- a/StreamBeats/app/src/main/AndroidManifest.xml
+++ b/StreamBeats/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.BODY_SENSORS" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.FITNESS_BODY_READ"/>
 
     <application
         android:allowBackup="true"
