--- a/StreamBeats/app/build.gradle
+++ b/StreamBeats/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.firasoft.streambeats"
+        applicationId "io.modesto.streambeats"
         minSdkVersion 26
         targetSdkVersion 28
         versionCode 1
